# pytwoway

./: .buildinfo  .coverage  .gitignore  .travis.yml  LICENSE  Makefile  README-PACK.md  README.md  README.rst  class-attrition.html  class-blmbootstrap.html  class-blmestimator.html  class-blmmodel.html  class-blmvariancedecomposition.html  class-bsestimator.html  class-creestimator.html  class-fecontrolestimator.html  class-feestimator.html  class-interactedblmmodel.html  class-montecarlo.html  class-simblm.html  class-sorkinestimator.html  conda-env-file.yml  conf.py  config.txt  cre.py  doc-cli.html  doc-python.html  doc-stata.html  environment.yml  fe_approximate_correction_full.py  genindex.html  index.html  index.rst  internal.html  mkdocs.yml  module-Q.html  module-attrition_utils.html  module-constraints.html  module-diagnostics.html  (+16 more)
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh
_sources/: class-fecontrolestimator.rst.txt  class-montecarlo.rst.txt  module-Q.rst.txt
_static/: class-blmbootstrap.rst  class-bsestimator.rst  class-interactedblmmodel.rst  class-simblm.rst  conf.py  doc-cli.rst  documentation_options.js  internal.rst
docs/: Makefile  Monte_Carlo_Example.ipynb  TwoWay.html  api.html  bipartite_network.html  class-bipartitedata.html  class-blmestimator.html  class-creestimator.html  class-cresolver.html  class-feestimator.html  class-fesolver.html  class-simtwoway.html  class-twoway.html  class-twowaymontecarlo.html  contents.html  cre.html  doc-cli.html  doc-python.html  doc-stata.html  fe-reference.md  fe.html  fe_approximate_correction_full.html  genindex.html  index.html  index.md  internal.html  modules.html  objects.inv  py-modindex.html  pytwoway.html  readme.html  search.html  searchindex.js  sim_twfe_network-reference.md  sim_twfe_network.html  sitemap.xml  toctree.html  twfe_network-reference.md  twfe_network.html
docs-src/: Makefile
julia/: constraints.jl
modules/: cre.py  fe_approximate_correction_full.py  sim_twfe_network.py  twfe_network.py
pytwoway/: blm.py  (+26 more)
(+175 files in other folders)
