[tool]
[tool.poetry]
name = "pytwoway"
version = "0.2.12"
description = "Estimate two way fixed effect labor models"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
homepage = "https://github.com/tlamadon/pytwoway"
authors = ["Thibaut Lamadon <thibaut.lamadon@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.7"
numpy = "*"
pandas = ">=1.0"
bipartitepandas = ">=1.0.28"
scipy = "*"
statsmodels = "*"
pyamg = "*"
qpsolvers = "=1.5"
osqp = "*"
ConfigArgParse = "*"
matplotlib = "*"
tqdm = "*"
pytest = "*"
