[tool]
[tool.poetry]
name = "pytwoway"
version = "0.3.17"
description = "Estimate two way fixed effect labor models"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
homepage = "https://github.com/tlamadon/pytwoway"
authors = ["Thibaut Lamadon <thibaut.lamadon@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.7"
numpy = "*"
pandas = ">=1.0"
numba = "*"
paramsdict = ">= 0.0.3"
bipartitepandas = ">=1.1.3"
scipy = "*"
statsmodels = "*"
pyamg = "*"
qpsolvers = "=1.5"
quadprog = "*"
ConfigArgParse = "*"
matplotlib = "*"
tqdm = "*"
pytest = "*"
